try to prevent double click on mobile

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -31,4 +31,15 @@
     @apply min-h-screen w-full;
     @apply font-roobert;
   }
+
+  div,
+  span,
+  input,
+  textarea,
+  button,
+  select,
+  a {
+    @apply focus:outline-none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
 }
